--- a/package.json
+++ b/package.json
@@ -5,20 +5,18 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
-    "prettier": "^1.12.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "prettier": "^1.14.3",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
     "lint": "prettier src/**/*.js --single-quote --write",
-    "test": "jest",
     "watch": "webpack --progress --watch",
     "start": "webpack-dev-server --config webpack.config.js --open",
     "build": "webpack"
