--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prettier": "^1.14.3",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "lint": "prettier src/**/*.js --single-quote --write",
